--- a/data_analysis/data_analysis.Rmd
+++ b/data_analysis/data_analysis.Rmd
@@ -79,7 +79,7 @@ chrome_data <- get_data("chrome")
 Save the collected data to the output folder. Set the current directory to "/plots" such that all plots are saved there.
 
 ```{r setup, include=FALSE, echo=FALSE}
-output_dir <- paste(getwd(), "output", sep="/")
+output_dir <- paste(getwd(), "analysis_results", sep="/")
 if (!dir.exists(output_dir)) {
   dir.create(output_dir)
 }
